assets/css/cj.file_browser.css
/* ... */
#header {
	position: fixed;
	top: 0px;
	left: 0px;
	display: block;
	width: 100%;
	height: 42px;
	background: #e6e6e6 url(../images/bg_white_blend_top_42x42.png) repeat-x left center;
	background-image: -moz-linear-gradient(top, #fcfcfc 0%, #ebebeb 49%, #e6e6e6 50%, #e6e6e6 100%);
	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fcfcfc), color-stop(49%,#ebebeb), color-stop(50%,#e6e6e6), color-stop(100%,#e6e6e6));
	background-image: -webkit-linear-gradient(top, #fcfcfc 0%,#ebebeb 49%,#e6e6e6 50%,#e6e6e6 100%);
	background-image: -o-linear-gradient(top, #fcfcfc 0%,#ebebeb 49%,#e6e6e6 50%,#e6e6e6 100%);
	background-image: -ms-linear-gradient(top, #fcfcfc 0%,#ebebeb 49%,#e6e6e6 50%,#e6e6e6 100%);
	background-image: linear-gradient(top, #fcfcfc 0%,#ebebeb 49%,#e6e6e6 50%,#e6e6e6 100%);
	border-bottom: 1px solid #aaa;
	overflow: hidden;
}

#sidebar {
	position: fixed;
	top: 43px;
	left: 0px;
	bottom: 25px;
	display: block;
	width: 200px;
	height: auto;
	overflow: auto;
	background: #f3f7e6;
}

#browser {
	position: fixed;
	top: 43px;
	left: 200px;
	bottom: 25px;
	right: 0px;
	background: #fff;
	overflow: auto;
	border-left: 1px solid #aaa;
}

#footer {
	position: fixed;
	left: 0px;
	bottom: 0px;
	width: 100%;
	height: 24px;
	background: #555 url(../images/bg_footer.png) repeat-x top left;
	background-image: -moz-linear-gradient(top, #444444 0%, #555555 100%);
	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#444444), color-stop(100%,#555555));
	background-image: -webkit-linear-gradient(top, #444444 0%,#555555 100%);
	background-image: -o-linear-gradient(top, #444444 0%,#555555 100%);
	background-image: -ms-linear-gradient(top, #444444 0%,#555555 100%);
	background-image: linear-gradient(top, #444444 0%,#555555 100%);
	border-top: 1px solid #999;
}

#CJModalBGround {
	position: fixed;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	display: none;
	width: 100%;
	height: auto;
	background: #000;
	z-index: 100;
}

/*
	header elements
**********************************/
#header {
	font-size: .7em;
}

#header #directoryOptions {
	position: absolute;
	top: 6px;
	left: 10px;
}

#header #fileOptions {
	position: absolute;
	top: 6px;
	right: 10px;
	text-align: right;
}

#header button {
	display: block;
	width: 31px;
	height: 32px;
	margin: 0;
	padding: 0;
	float: left;
	clear: none;
	background: transparent;
	border: none;
}

#header button span {
	display: none;
}

#header button:hover {
	background-position: 0px -32px;
}

#header button:active {
	background-position: 0px -96px;
}

#header button[disabled],
#header button[disabled="disabled"],
#header button.disabled {
	background-position: 0px -64px;
	cursor: default;
}

#header button.deactive {
	display: none;
}

/*
	header buttons
**********************************/
#header #fileOptions button#iconview {
	background: url(../images/icn_iconview.png) no-repeat 0px 0px;
}

#header #fileOptions button#listview {
	background: url(../images/icn_listview.png) no-repeat 0px 0px;
}

#header #fileOptions button#newfolder {
	background: url(../images/icn_newfolder.png) no-repeat 0px 0px;
}

#header #fileOptions button#fileUpload {
	background: url(../images/icn_uploadfile.png) no-repeat 0px 0px;
}

#header #fileOptions button#fileDelete {
	background: url(../images/icn_deletefile.png) no-repeat 0px 0px;
}

#header #fileOptions button#fileSelect {
	background: url(../images/icn_selectfile.png) no-repeat 0px 0px;
}

#header #directoryOptions button#directoryOut {
	background: url(../images/icn_directoryout.png) no-repeat 0px 0px;
}

#header #directoryOptions button#directoryIn {
	background: url(../images/icn_directoryin.png) no-repeat 0px 0px;
}

#header #directoryOptions #directories {
	width: 250px;
	height: 28px;
	line-height: 28px;
	background: #eee;
	border-color: #777;
	font-size: 11px;
}

#header #directoryOptions .container {
	display: block;
	width: 250px;
	height: auto;
	margin: 1px 0 0 10px;
	float: left;
	clear: none;
	white-space: nowrap;
}

/*
	sidebar elements
**********************************/
#sidebar ul {
	margin: 0;
	padding: 0;
	list-style: none;
	background: #fff url(../images/bg_sidebar.png);
}

#sidebar ul li {
	line-height: 16px;
	padding: 3px 15px 3px 35px;
	margin: 0;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 12px;
	white-space: nowrap;
	text-shadow: 0 1px 0 #fff;
}

#sidebar ul li a {
	color: #000;
	text-decoration: none;
}

#sidebar ul li.hovering {
	background-color: #d5eb7b !important;
	border: 0;
}

#sidebar ul li.selected {
	background-color: #b4d727 !important;
	border: 0;
	font-weight: bold;
	text-shadow: 0 1px 0 #d5eb7b;
}

/*
	browser elements
**********************************/
#browser ul {
	margin: 3px;
	padding: 0;
}

#browser ul li {
	position: relative;
	display: block;
	width: 150px;
	height: 170px;
	margin: 10px 5px;
	padding: 0;
	font-size: 11px;
	float: left;
	clear: none;
}

#browser ul li .diritem {
	display: block;
	width: 150px;
	height: 170px;
	border: 2px solid #fff;
	overflow: hidden;
}

#browser ul li .icon {
	position: relative;
	display: block;
	width: 120px;
	height: 120px;
	margin: 5px auto 0 auto;
	border: 1px solid #eee;
	background: #fff;
}

#browser ul li .imgHolder {
	position: absolute;
	top: 16px;
	left: 28px;
	display: none;
	width: 65px;
	height: 88px;
	background: #fff;
	overflow: hidden;
}

#browser ul li .name {
	display: block;
	width: 100%;
	height: auto;
	margin-top: 5px;
	font-weight: bold;
	text-align: center;
}

#browser ul li .namefull {
	display: none;
}

#browser ul li .size {
	text-align: center;
}

#browser ul li .dimensions {
	display: none;
}

#browser ul li .modified {
	display: none;
}

#browser ul li .mimeType {
	display: none;
}

#browser ul li.hovering .diritem {
	background: #fcfff1;
	border: 2px solid #e4f3aa;
}

#browser ul li.selected .diritem {
	background: #f9ffe3;
	border: 2px solid #b4d727;
}

#browser ul li a {
	color: #000;
	text-decoration: none;
}
/* ... */

